Fix Script editor. step 2
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7139 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
@@ -11,7 +11,7 @@
 			import net.vdombox.ide.modules.scripts.events.ContainersPanelEvent;
 
 			[Bindable]
-			private var _structure : XML;
+			private var _structure : XMLList;
 
 			public function get selectedObjectID() : String
 			{
@@ -39,9 +39,14 @@
 				return containersTree.selectedItem as XML;
 			}
 
-			public function set structure( value : XML ) : void
+			public function set structure( value : XMLList ) : void
 			{
 				_structure = value;
+			}
+			
+			public function get structure() : XMLList
+			{
+				return _structure;
 			}
 		]]>
 	</fx:Script>
