git-svn-id: http://svn.vdombox.ru/flextools/trunk@7145 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/TextToolbar.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/TextToolbar.mxml
@@ -125,6 +125,8 @@
 				enabled = false;
 				isInited = false;
 				attributesObject[ "value" ].value = elementForEditing.text;
+				
+				dispatchEvent( new Event( Event.CHANGE ) );
 
 				var attributeValue : String;
 
@@ -407,10 +409,10 @@
 			public function get vdomObjectAttributesVO() : VdomObjectAttributesVO
 			{
 				var vdomObjectAttributesVO : VdomObjectAttributesVO = new VdomObjectAttributesVO(_item.vdomObjectVO);
-				var attributeVO : AttributeVO = new AttributeVO( "valie" );
+				var attributeVO : AttributeVO = new AttributeVO( "value" );
 				
-//				attributeVO.value = tinyMCE.getContent();
-//				vdomObjectAttributesVO.attributes = [attributeVO];
+				attributeVO.value = attributesObject[ "value" ].value;
+				vdomObjectAttributesVO.attributes = [attributeVO];
 				
 				return vdomObjectAttributesVO;
 			}
