--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
@@ -210,7 +210,7 @@
 				if ( parentItem )
 				{
 					openTree( parentItem );
-					/*objectsTree.expandItem( parentItem, true, false );*/
+					objectsTree.expandItem( parentItem, true, false );
 				}
 			}
 			
