git-svn-id: http://svn.vdombox.ru/flextools/trunk@7149 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -190,7 +190,7 @@
 
 		<s:Rect width="100%" top="0" bottom="-2">
 			<s:fill>
-				<s:SolidColor color.normal="#585858" color.hovered="#00000A" alpha.hovered="0.8" color.selected="#00000A" />
+				<s:SolidColor color="#585858" />
 			</s:fill>
 		</s:Rect>
 
