--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectRendererSkin.mxml
@@ -2,7 +2,15 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 xmlns:mx="library://ns.adobe.com/flex/halo">
-
+	
+	<s:transitions>
+		<s:Transition autoReverse="true">
+			<s:Animate target="{strokeLine}">
+				<s:SimpleMotionPath property="alpha"/>                
+			</s:Animate>
+		</s:Transition>
+	</s:transitions>
+	
 	<s:states>
 		<s:State name="normal" />
 		<s:State name="hovered" />
@@ -64,13 +72,14 @@
 		</s:fill>
 	</s:Rect>
 	
-	<s:Rect  bottom="0" left="0" right="0" top="0"
-			includeIn="highlighted, hovered, select">
+	<s:Rect  bottom="0" left="0" right="0" top="0">
 
 		<s:stroke>
 
-			<s:SolidColorStroke color.highlighted="green" color.hovered="gray" color.select="#0000FF"
-								weight="2" />
+			<s:SolidColorStroke id="strokeLine"
+								color="gray" color.highlighted="green" color.hovered="gray" color.select="#0000FF"
+								weight="2" 
+								alpha="0" alpha.hovered="1" alpha.highlighted="1" alpha.select="1"/>
 		</s:stroke>
 	</s:Rect>
 </s:SparkSkin>
