deleted selection of page on render scin
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7151 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
@@ -73,7 +73,7 @@
 		</s:fill>
 	</s:Rect>
 
-	<s:Rect bottom="0" left="0" right="0" top="0"
+	<!--s:Rect bottom="0" left="0" right="0" top="0"
 			includeIn="highlighted, hovered">
 
 		<s:stroke>
@@ -81,5 +81,5 @@
 			<s:SolidColorStroke color.highlighted="green" color.hovered="gray"
 								weight="2"/>
 		</s:stroke>
-	</s:Rect>
+	</s:Rect-->
 </s:SparkSkin>
