--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -51,17 +51,7 @@
 	<s:Group width="100%" height="42">
 		<s:TitleBar id="titleBar"
 					minHeight="32" width="100%"
-					skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PopupWindowTitleBarSkin"/>
-		<!--<s:Rect bottom="0" left="0" right="0" top="0">
-			<s:fill>
-				<s:LinearGradient rotation="90">
-					<s:GradientEntry color="#B70000"/>
-					<s:GradientEntry color="#A00000"/>
-				</s:LinearGradient>
-			</s:fill>
-		</s:Rect>
-		<s:Label top="12" left="20" color="#FFFFFF" fontSize="20"
-			text="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_title' ) }"/>-->
+					skinClass="net.vdombox.view.skins.PopupWindowTitleBarSkin"/>
 	</s:Group>	
 		
 	<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off">
