--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -63,7 +63,7 @@
 		<s:Group width="100%" height="42">
 			<s:TitleBar id="titleBar"
 						minHeight="32" width="100%"
-						skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PopupWindowTitleBarSkin"/>
+						skinClass="net.vdombox.view.skins.PopupWindowTitleBarSkin"/>
 			<!--<s:Rect bottom="0" left="0" right="0" top="0">
 				<s:fill>
 					<s:LinearGradient rotation="90">
