Add ApplicationManagerWindow. Step 1
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7156 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -109,6 +109,10 @@
 				
 				<mx:Spacer width="100%" />
 				
+				<s:Button id="applicationManagerButton"
+						  label="App Manager"
+						  height="100%"/>
+				
 				<components:LoginButton id="loginButton"
 										height="100%"
 										icon="@Embed('../assets/main/logout.png')"
